--- a/PrzewodnikTurystyczny/res/layout/cust_grouprow_ex_lista.xml
+++ b/PrzewodnikTurystyczny/res/layout/cust_grouprow_ex_lista.xml
@@ -7,7 +7,8 @@
     android:drawableRight="@drawable/zielony"
     android:gravity="left"
     android:paddingLeft="32dp"
-    android:paddingTop="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:text="@string/demo_str"
     android:textSize="14sp"
     android:textStyle="bold" />
