--- a/PrzewodnikTurystyczny/res/values/styles.xml
+++ b/PrzewodnikTurystyczny/res/values/styles.xml
@@ -118,4 +118,12 @@
         <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
         <item name="android:scrollbarStyle">insideInset</item>
     </style>
+    
+    <style name="lbl_naglowek">
+		<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingBottom">5dp</item>
+    </style>
 </resources>
